@@ -16,6 +16,12 @@ JLoader::register('FinderHelperLanguage', JPATH_ADMINISTRATOR . '/components/com
 // Include the helper.
 require_once dirname(__FILE__) . '/helper.php';
 
+if (!defined('FINDER_PATH_INDEXER'))
+{
+	define('FINDER_PATH_INDEXER', JPATH_ADMINISTRATOR . '/components/com_finder/helpers/indexer');
+}
+JLoader::register('FinderIndexerQuery', FINDER_PATH_INDEXER . '/query.php');
+
 // Check for OpenSearch
 if ($params->get('opensearch', 1))
 {
@@ -44,5 +50,8 @@ FinderHelperLanguage::loadComponentLanguage();
 
 // Load plug-in language files.
 FinderHelperLanguage::loadPluginLanguage();
+
+// Get Smart Search query object.
+$query = modFinderHelper::getQuery($params);
 
 require JModuleHelper::getLayoutPath('mod_finder', $params->get('layout', 'default'));
