@@ -16,15 +16,6 @@ JHtml::addIncludePath(JPATH_SITE . '/components/com_finder/helpers/html');
 $lang = JFactory::getLanguage();
 $lang->load('com_finder', JPATH_SITE);
 
-if (!defined('FINDER_PATH_INDEXER'))
-{
-	define('FINDER_PATH_INDEXER', JPATH_ADMINISTRATOR . '/components/com_finder/helpers/indexer');
-}
-JLoader::register('FinderIndexerQuery', FINDER_PATH_INDEXER . '/query.php');
-
-// Instantiate a query object.
-$query = new FinderIndexerQuery(array('filter' => $params->get('f')));
-
 $suffix = $params->get('moduleclass_sfx');
 $output = '<input type="text" name="q" id="mod-finder-searchword" class="inputbox" size="' . $params->get('field_size', 20) . '" value="' . htmlspecialchars(JFactory::getApplication()->input->get('q', '', 'string')) . '" />';
 $button = '';
