@@ -36,6 +36,8 @@ $ -> Language fix or change
  # Correcting encoding ml-IN.xml
  # [#27812] image float issues. Thanks Andrea.
  # [#27791] SQL Server - Cannot access Smart Search Filter Edit View. Thanks Michael
+ # [#27789] SQL Server - Smart Search Statistics view fails to load. Thanks Michael.
+ # [#27691] Active taxonomy nodes are ignored in Smart Search module. Thanks Chris.
  
 21-Jan-2012 Jean-Marie Simonet
  $ Updating installation ini files tr-TR, ur-PK
